tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__ZPMEnergyHatch-AAAAAAAAAAAAAAAAAAAKQw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2627,
  "prerequisites": [
    2632,
    2619
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You'll need this for the next tier of fusion so you can make Americium and Tritanium, and to upgrade your multis.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "ZPM Energy Hatch",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2632,
    2619
  ],
  "rewards": [],
  "tasks": []
}
