tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__ZPMFieldGenerato-AAAAAAAAAAAAAAAAAAAKPg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2622,
  "prerequisites": [
    2612,
    1710
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Why are they circles anyway? Wouldn't that make it harder to fit in a device?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "ZPM Field Generator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2612,
    1710
  ],
  "rewards": [],
  "tasks": []
}
